# sadel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml  pr.yaml  pr.yml  test.yml
sadel/: __init__.py  base.py
tests/: test_base.py
